--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="css/preset/preset.css">
-  <!-- Put CSS Link here!-->
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>CSS Practice</title>
 </head>
 <body>
 	<div id="title-section">
-    <h1>The Ultimate CSS Walkthrough</h1>
-    <h2>An Introduction to Cascading Style Sheets</h2>
-  </div>
+    <h1>im so tired</h1>
+    <h2>"maddieExampleClass"</h2>
+  </div>An introduction to Cascading style Sheets
   <hr>
   <div id="welcome">
     <p>Welcome! We're excited to have you here. Today, we'll be walking through learning CSS. It's going to be awesome.
@@ -35,7 +35,7 @@
     <ul>
       <li class="font-style">Font style</li>
       <li class="text-size">Text size</li>
-      <li class="background">Background</li>
+      <li class="Background">Background</li>
       <li class="borders">Borders</li>
       <li class="page-layout">Page Layout (like this grid of examples!)</li>
       <li class="margins">Margins</li>
@@ -45,6 +45,16 @@
   </div>
   <hr>
   <div class="info-section">
+     font-size: 300%;
+     background-color: white;
+     font-family: courier;
+     border: 1px dotted red;
+     text-transform: uppercase;
+     letter-spacing: 5px;
+     transition: rotate(-30)deg;
+     text-shadow: length
+   }
+   }
     <h3>How do we get get started on combining CSS HTML?</h3>
     <p> The first thing you need to do is create a CSS stylesheet and link to it in your HTML file. Your link should be in the 'head' section of the html in this page and should look something like this:<br>
      <pre>&#60link rel="stylesheet" type="text/css" href="path_to_stylesheet"&#62</pre>
@@ -91,13 +101,15 @@
   <p>Next, add some declarations. If you're not sure what to add, try some or all of the following, and feel free to change the values:</p>
   <pre>
     .anExampleClass {
-      font-size: 300%;
-      background-color: lightgreen;
-      font-family: courier;
-      border: 1px dotted red;
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      transition: rotate(-30)deg;
+       font-size: 300%;
+     background-color: white;
+     font-family: courier;
+     border: 1px dotted red;
+     text-transform: uppercase;
+     letter-spacing: 5px;
+     transition: rotate(-30)deg;
+     text-shadow: length
+   }
     }
   </pre>
   <p>Finally, with our class declarations created, we need to assign this class to elements in index.html</p>
